trying to force a deploy?

--- a/Client_Side/index.html
+++ b/Client_Side/index.html
@@ -9,7 +9,7 @@
 		<script src="JavaScript/index/index.js"></script>
 	</head>
 	<body>
-		<table id="mainTbl" >
+		<table id="mainTbl" class="additional">
 			<tr>
 				<td class="smlBrk"></td>
 				<td id="topRw"><img id="logo" src="" alt="company logo" text="company logo" /></td>
